feat(gin/auth-jwt): Add JWT to Login() and middleware
